# angular

./: WORKSPACE
.circleci/: config.yml  windows-env.ps1
dev-infra/: BUILD.bazel  tmpl-package.json
dev-infra/benchmark/driver-utilities/: BUILD.bazel
modules/benchmarks/src/class_bindings/: BUILD.bazel
tools/ci-scripts/: get-pr-refs-and-sha.js  rebase-pr.js  should-run-windows-ci.js
tools/public_api_guard/common/: common.d.ts
