load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "cli",
    srcs = [
        "cli.ts",
    ],
    module_name = "@angular/dev-infra-private",
    deps = [
        "//dev-infra/commit-message",
        "//dev-infra/pullapprove",
        "//dev-infra/utils:config",
        "@npm//@types/node",
    ],
)

genrule(
    name = "package-json",
    srcs = [
        "tmpl-package.json",
        "//:package.json",
    ],
    outs = ["package.json"],
    cmd = """
        $(location //tools:inline-package-json-deps) $(location tmpl-package.json) \
            $(location //:package.json) $@
    """,
    tools = ["//tools:inline-package-json-deps"],
)

pkg_npm(
    name = "npm_package",
    visibility = ["//visibility:public"],
    srcs = [
        "BUILD.bazel",
        "//dev-infra/tools:files",
    ],
    substitutions = {
        "//dev-infra/": "@npm_dev_infra//",
        "//packages/benchpress": "@npm//@angular/benchpress",
        "//packages/bazel/src:esm5.bzl": "@npm_angular_bazel//src:esm5.bzl",
        "//packages/zone.js/dist:zone.js": "@npm//:node_modules/zone.js/dist/zone.js",
        "//tools:defaults.bzl": "@npm_angular_bazel//:index.bzl",
        "//packages/core": "@npm//@angular/core",
    },
    deps = [
        ":cli",
        ":package-json",
        "//dev-infra/commit-message",
        "//dev-infra/ts-circular-dependencies",
        "//dev-infra/benchmark/driver-utilities",
    ],
)
